modification du formulaire

--- a/A_propos_de_nous.html
+++ b/A_propos_de_nous.html
@@ -190,13 +190,13 @@
         la plus importante pour inciter les clients à vous faire confiance.
       </p>
 
-      <button>Voir les produits</button>
+      <button><a href="produits.html">Voir les produits </a></button>
     </section>
 
     <section class="section5" id="sc5">
       <h2>Contactez-nous</h2>
       <div class="contenu-section4">
-        <form>
+        <form action="https://formspree.io/f/mgvavakw" method="post">
           <div class="contenu-form">
             <div class="mail">
               <label for="mail">Email</label>
@@ -205,6 +205,7 @@
                 id="mail"
                 required
                 placeholder="Entrez une adresse mail valide"
+                name="Email"
               />
             </div>
             <div class="nom">
@@ -214,6 +215,7 @@
                 required
                 placeholder="Entrez votre nom complet"
                 id="nom"
+                name="name"
               />
             </div>
           </div>
