--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <section class="section4" id="sc4">
       <h2>Contactez-nous</h2>
       <div class="contenu-section4">
-        <form>
+        <form action="https://formspree.io/f/mgvavakw" method="post">
           <div class="contenu-form">
             <div class="mail">
               <label for="mail">Email</label>
@@ -199,6 +199,7 @@
                 id="mail"
                 required
                 placeholder="Entrez une adresse mail valide"
+                name="Email"
               />
             </div>
             <div class="nom">
@@ -208,6 +209,7 @@
                 required
                 placeholder="Entrez votre nom complet"
                 id="nom"
+                name="name"
               />
             </div>
           </div>
