--- a/produits.html
+++ b/produits.html
@@ -236,16 +236,12 @@
     <section class="section5" id="sc5">
       <h2>Contactez-nous</h2>
       <div class="contenu-section4">
-        <form>
+        <form action="https://formspree.io/f/mgvavakw" method="post">
           <div class="contenu-form">
             <div class="mail">
               <label for="mail">Email</label>
-              <input
-                type="text"
-                id="mail"
-                required
-                placeholder="Entrez une adresse mail valide"
-              />
+              <input type="text" id="mail" required placeholder="Entrez une
+              adresse mail valide" name="Email" />
             </div>
             <div class="nom">
               <label for="nom">Nom</label>
@@ -254,6 +250,7 @@
                 required
                 placeholder="Entrez votre nom complet"
                 id="nom"
+                name="name"
               />
             </div>
           </div>
